--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -648,7 +648,6 @@
     <message key="proposal.drugInfo.administration.mucosal">Mucosla</message>    
     <message key="proposal.drugInfo.administration.topical">Topical/Dermal</message>    
     <message key="proposal.drugInfo.administration.inhalation">Inhalation</message>    
-
     <message key="proposal.drugInfo.form.aerosols">Aerosols</message>    
     <message key="proposal.drugInfo.form.capsules">Capsules</message>    
     <message key="proposal.drugInfo.form.dpinhaleur">Dry powder inhaleur</message>    
@@ -676,7 +675,6 @@
     <message key="proposal.drugInfo.form.suspensions">Suspensions</message>    
     <message key="proposal.drugInfo.form.tablet">Tablet</message>    
     <message key="proposal.drugInfo.form.tapes">Tapes</message>    
-    
     <message key="proposal.drugInfo.storage.freezer">Freezer (temperature between −25° and −10°)</message>    
     <message key="proposal.drugInfo.storage.cold">Cold (temperature not exceeding 8°)</message>    
     <message key="proposal.drugInfo.storage.cool">Cool (temperature between 8°-15°)</message>    
@@ -685,12 +683,18 @@
     <message key="proposal.drugInfo.storage.contRoom">Controlled room temperature</message>    
     <message key="proposal.drugInfo.storage.warm">Warm (temperature between 30° and 40°)</message>    
     <message key="proposal.drugInfo.storage.heat">Excessive heat ( above 40°)</message>    
-
     <message key="proposal.drugInfo.class.I">Class I</message>    
     <message key="proposal.drugInfo.class.II">Class II</message>    
     <message key="proposal.drugInfo.class.III">Class III</message>    
     <message key="proposal.drugInfo.class.IV">Class IV</message>    
         
+    <message key="proposal.articleSite">Clinical trial site</message>   
+    <message key="proposal.articleSite.add">Add trial site</message>       
+    <message key="proposal.articleSite.remove">Remove trial site</message>   
+
+
+
+
         <message key="proposal.purpose.endpoint.saf">Safety</message>
         <message key="proposal.purpose.endpoint.eff">Efficacy</message>
         <message key="proposal.purpose.endpoint.safAndEff">Safety and Efficacy</message>
