Created JS and HTML for submission step 4: authority, primaryPhone, secondaryPhone, fax, email and subjectsNumber

--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -699,6 +699,18 @@
     <message key="proposal.articleSite.siteCity">City</message>   
     <message key="proposal.articleSite.siteLicensure">DOH Licensure number</message>   
     <message key="proposal.articleSite.siteAccreditation">Philhealth accreditation number</message>   
+    <message key="proposal.articleSite.authority">Approving authority</message>   
+    <message key="proposal.articleSite.authority.instruct">Full name of Approving Authority (Director ) for the Trial Site who has issued the endorsement letter.</message>   
+    <message key="proposal.articleSite.primaryPhone">Primary phone</message>   
+    <message key="proposal.articleSite.primaryPhone.instruct">Primary phone number of the approving authority. Only professional contact details should be provided. Telephone and fax numbers should be entered in this format +Country code, Area Code, Number. Example: +63 44 7911111</message>   
+    <message key="proposal.articleSite.secondaryPhone">Secondary phone</message>   
+    <message key="proposal.articleSite.secondaryPhone.instruct">If known, secondary phone number of the approving authority. Only professional contact details should be provided. Telephone and fax numbers should be entered in this format +Country code, Area Code, Number. Example: +63 44 7911111</message>   
+    <message key="proposal.articleSite.fax">Fax</message>   
+    <message key="proposal.articleSite.fax.instruct">Fax number of the approving authority. Only professional contact details should be provided. Telephone and fax numbers should be entered in this format +Country code, Area Code, Number. Example: +63 44 7911111</message>   
+    <message key="proposal.articleSite.email">Email</message>   
+    <message key="proposal.articleSite.email.instruct">Email of the approving authority. Only professional contact details should be provided.</message>   
+    <message key="proposal.articleSite.subjectsNumber">Number of subjects</message>   
+    <message key="proposal.articleSite.subjectsNumber.instruct">Planned number of trial subjects for this site.</message>   
 
         <message key="proposal.purpose.endpoint.saf">Safety</message>
         <message key="proposal.purpose.endpoint.eff">Efficacy</message>
