--- a/locale/en_US/locale.xml
+++ b/locale/en_US/locale.xml
@@ -150,7 +150,16 @@
 	<message key="institution.type.privateProfit">Private for profit</message>
 	<message key="institution.type.privateNonProfit">Private for non-profit</message>
 	<message key="institution.type.privateIndividual">Private Individual</message>
-        
+
+	<message key="trialSite.trialSite">Trial Site</message>        
+	<message key="trialSite.trialSites">Trial Sites</message>        
+	<message key="trialSite.name">Name</message>
+	<message key="trialSite.city">City</message>
+	<message key="trialSite.region">Area</message>
+	<message key="trialSite.address">Address</message>
+	<message key="trialSite.licensure">DOH licensure</message>
+	<message key="trialSite.accreditation">Philhealth accreditation</message>
+                        
         <message key="proposal.source">Source</message>
         <message key="proposal.source.instruct">Please select the funding source from the drop down menu. If your funding source is not listed: please select "Key Implementing Institution" at the end of the drop down menu, if your funding source is the same as your Key Implementing Institution, OTHERWISE select "Other".</message>
         <message key="proposal.source.instruct2"><![CDATA[<i>If your funding source is not listed, please select "Key Implementing Institution" at the end of the drop-down menu, if your funding source is same as your key implementing institution, OTHERWISE select "Other".</i>]]></message>
